# clickforge

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
assets/: demo.tape  kafka.tape
docs/: explain.tape  kafka.tape  scan.tape  table.tape
src/: cli.rs  diff.rs  generator.rs  inference.rs  main.rs  scanner.rs  schema.rs
tests/: cli.rs
tests/fixtures/: new.json  sample.json
