[package]
name = "clickforge"
version = "0.6.1"
edition = "2024"
description = "Generate Kafka→ClickHouse ingestion pipeline migrations from a JSON sample"
repository = "https://github.com/Maksim-Gr/clickforge"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
owo-colors = { version = "4", features = ["supports-colors"] }
serde_json = { version = "1", features = ["preserve_order"] }
